--- a/index.html
+++ b/index.html
@@ -5,16 +5,31 @@
 	 <meta charset="utf-8">
 	 <title>CLICK and DRAW</title>
  	<style>
-	  	body {
+	  	canvas {
+	  		position: absolute;
+	  		left: 290px;
+	  		top: 0px;
 	   		overflow: hidden;
 	   		background-color: black;
 	  }
+
+	  body {
+	  	background-color: #c3dedb;
+	  }
+
 	 </style>
 </head>
 
 <body>
 	 <canvas>Please update your browser</canvas>
 	 <script src="main.js"></script>
+
+	 <h2>Instructions:</h2>
+
+	<p>Click on the part of the screen that is black</p>
+	<p>Begin moving the mouse around</p>
+	<p>Draw whatever you want</p>
+	<p>Hit refresh to clear the screen<p>		
 </body>
 
 </html>
