--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 	<p>Click on the part of the screen that is black</p>
 	<p>Begin moving the mouse around</p>
 	<p>Draw whatever you want</p>
-	<p>Hit refresh to clear the screen<p>		
+	<p>Click the button to clear the screen<p>		
+
+	<button onclick="clearcanvas() ">Clear</button>
+	
 </body>
 
 </html>
