added clear button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 	  body {
 	  	background-color: #c3dedb;
+
+	   		overf/*low: hidden;
+	   		back*/ground-color: black;
 	  }
 
 	 </style>
@@ -31,8 +34,8 @@
 	<p>Draw whatever you want</p>
 	<p>Click the button to clear the screen<p>		
 
-	<button onclick="clearcanvas() ">Clear</button>
-	
+	<button onclick="clearcanvas()">Clear</button>
+
 </body>
 
 </html>
